# PowerSupplyControl

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/app/: dependencies.py  power_supply.py  router.py  schemas.py  services.py
src/app/Channels/: router.py  schemas.py
src/app/tests/: __init__.py  conftest.py  test_router.py
